<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of the eReader application.

    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
    as published by the Free Software Foundation; either version 2
    of the License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 -->
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FullscreenTheme"
    android:background="#fffafafa"
    android:id="@+id/bg"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:gravity="top"
    android:weightSum="10"
    tools:context=".AddBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4.5"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:background="#243840"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:id="@+id/linearLayout" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/optnbtn_add"
                android:src="@drawable/optbtn"
                android:background="#00ffffff"
                android:layout_gravity="left|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:background="#243840"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="5">

            <LinearLayout
                android:background="#243840"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="5">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/layoutToReplace">
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:weightSum="6"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:id="@+id/roundbtnbg"
            android:background="@drawable/gro">

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#ff263941">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/addbook"
                    android:layout_gravity="bottom"
                    android:textColor="#fffafafa" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#fffafafa">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="#fffafafa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:weightSum="3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1.5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.8"
            android:weightSum="3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#ff283a42"
                android:weightSum="4">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/manually_book"
                        android:layout_gravity="center_vertical|bottom"
                        android:layout_marginLeft="20dp"
                        android:textColor="#fffafafa" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/supported_formats"
                        android:id="@+id/textView2"
                        android:textColor="#ffd4d4d4"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="top" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#ffe8e8e8"
                android:id="@+id/lel2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:id="@+id/add_button"
                    android:layout_gravity="center_horizontal|top"
                    android:textColor="#ff263941"
                    android:background="#ffd4d4d4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:weightSum="3">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#ff283a42"
                android:weightSum="4">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/availhosts"
                        android:layout_gravity="center_vertical|bottom"
                        android:layout_marginLeft="20dp"
                        android:textColor="#fffafafa" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/click_questmark"
                        android:id="@+id/textView2"
                        android:textColor="#ffd4d4d4"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="top" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#ffe8e8e8">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/downloadhosts_list"
                    android:layout_gravity="center_horizontal|top"
                    android:choiceMode="singleChoice"
                    android:divider="#96243840"
                    android:dividerHeight="1px" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>